New column to store the date of vinyl additions & Improvement swagger responses desc
